fix contextmenu icon alignment

--- a/skins/larry/markasjunk2.css
+++ b/skins/larry/markasjunk2.css
@@ -32,7 +32,7 @@
 
 #markmessagemenu a.markasjunk2 span
 {
-  background-position: 1px -15px;
+  background-position: 1px -17px;
 }
 
 #markmessagemenu a.markasnotjunk2 span
@@ -42,10 +42,10 @@
 
 #rcmContextMenu .markasjunk2 a span
 {
-  background-position: 7px -18px;
+  background-position: 7px -14px;
 }
 
 #rcmContextMenu .markasnotjunk2 a span
 {
-  background-position: 7px 0;
+  background-position: 7px 7px;
 }
